--- a/html/Yahoo_Japan/index-2018.3.20.html
+++ b/html/Yahoo_Japan/index-2018.3.20.html
@@ -249,4 +249,4 @@ Windows：Internet Explorer 11.0以上 / Chrome 最新版 / Firefox 最新版 / 
 </body>
 </html>
 
-<!-- p05.f4.top.kks.yahoo.co.jp Wed Mar 21 01:57:18 JST 2018 -->
+<!-- p08.f10.top.ssk.yahoo.co.jp Wed Mar 21 03:07:55 JST 2018 -->
